@@ -1,3 +1,8 @@
+2010-01-16  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* lib/mysql.rb (Mysql#escape_string): raise error for unsafe
+	multibyte charset
+
 2010-01-15  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* Fix: When GC destroy Mysql::Stmt object, protocol error occurred
